[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/melee_final_destination_background.jpg" type="Texture" id=5]
[ext_resource path="res://art/Final Destination - Super Smash Bros_ Melee.mp3" type="AudioStream" id=6]
[ext_resource path="res://art/fox_death.mp3" type="AudioStream" id=7]
[ext_resource path="res://art/FoxGrunt1.mp3" type="AudioStream" id=8]
[ext_resource path="res://art/FoxGrunt3.mp3" type="AudioStream" id=9]
[ext_resource path="res://art/FoxGrunt2.mp3" type="AudioStream" id=10]
[ext_resource path="res://art/FoxGrunt4.mp3" type="AudioStream" id=11]
[ext_resource path="res://art/FoxGrunt7.mp3" type="AudioStream" id=12]
[ext_resource path="res://art/FoxGrunt5.mp3" type="AudioStream" id=13]
[ext_resource path="res://art/FoxGrunt6.mp3" type="AudioStream" id=14]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 5 )
expand = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="FoxGrunt1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[node name="FoxGrunt2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 1.0

[node name="FoxGrunt3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 1.0

[node name="FoxGrunt4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 1.0

[node name="FoxGrunt5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 1.0

[node name="FoxGrunt6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 1.0

[node name="FoxGrunt7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 1.0

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
